Update docs to use dbcp + webapp-runner
Use dbcp + webapp-runner as default to deploy cBioPortal. Document the use of
`-D` parameters.